@startuml

class Circle {
}

class Square {
}

note "using Shape = std::variant<Circle, Square>;" as Shape

struct ShapeRender {
  + void operator()(const Circle&) const
  + void operator()(const Square&) const
}

struct ShapeSerializer {
  + void operator()(const Circle&) const
  + void operator()(const Square&) const
}

Shape ..> Circle
Shape ..> Square

ShapeRender ..> Shape
ShapeSerializer ..> Shape

@enduml